--- a/index.html
+++ b/index.html
@@ -4,9 +4,124 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200i,400&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <div class="container">
+            <div class="header">
+                <h2>freeCodeCamp Survey Form</h2>
+                <p>Thank you for taking the time to help us improve the platform</p>
+            </div>
+            <div>
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input class="form-control" type="text" name="name" id="name" placeholder="Enter your name">
+                    </div>
+                    <div class="form-group">
+                        <label for="mail">Email</label>
+                        <input class="form-control" type="email" name="mail" id="mail" placeholder="Enter you Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="number">Age <span>(optional)</span></label>
+                        <input class="form-control" type="number" min="10" max="30" id="number" name="age" placeholder="Age">
+                    </div>
+                    <div class="form-group">
+                        <label for="role">Which option best describes your current role?</label>
+                        <select class="form-control" id="role" name="role">
+                            <option selected disabled>Select current role</option>
+                            <option value="student">Student</option>
+                            <option value="job">Full time Job</option>
+                            <option value="learning">Full time Learning</option>
+                            <option value="prefer">Prefer not to say</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <div class="form-radio form-group">
+                        <label>Would you recommend freeCodeCamp to a friend?</label>                      
+                        <label for="definitely">
+                            <input type="radio" name="recommend" id="definitely" value="definitely">
+                            Definitely
+                        </label>                     
+                        <label for="maybe">
+                            <input type="radio" name="recommend" id="maybe" value="maybe">
+                            Maybe
+                        </label>
+                        <label for="not_sure">
+                            <input type="radio" name="recommend" id="not_sure" value="not_sure">
+                            Not Sure
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="feature">What is your favorite feature of freeCodeCamp?</label>
+                        <select class="form-control" id="feature" name="feature">
+                            <option selected disabled>Select an option</option>
+                            <option value="challenges">Challenges</option>
+                            <option value="projects">Projects</option>
+                            <option value="community">Community</option>
+                            <option value="open_source">Open Source</option>
+                        </select>
+                    </div>
+                    <div class="form-radio form-group">
+                        <label>What would you like to see improved? <span>(Check all that apply)</span></label>                       
+                        <label for="front_end">
+                            <input type="checkbox" id="front_end" value="front_end" name="improved[]">
+                            Front-end Projects
+                        </label>                       
+                        <label for="back_end">
+                            <input type="checkbox" id="back_end" value="back_end" name="improved[]">
+                            Back-end Projects
+                        </label>
+                        <label for="data">
+                            <input type="checkbox" id="data" value="data" name="improved[]">
+                            Data Visualization
+                        </label>
+                        <label for="challenges">
+                            <input type="checkbox" id="challenges" value="challenges" name="improved[]">
+                            Challenges
+                        </label>
+                        <label for="course_community">
+                            <input type="checkbox" id="course_community" value="cource_community" name="improved[]">
+                            Open Source Community
+                        </label>
+                        <label for="gitter">
+                            <input type="checkbox" id="gitter" value="gitter" name="improved[]">
+                            Gitter help rooms
+                        </label>
+                        <label for="videos">
+                            <input type="checkbox" id="videos" value="videos" name="improved[]">
+                            Videos
+                        </label>
+                        <label for="city">
+                            <input type="checkbox" id="city" value="city" name="improved[]">
+                            City Meetups
+                        </label>
+                        <label for="wiki">
+                            <input type="checkbox" id="wiki" value="wiki" name="improved[]">
+                            Wiki
+                        </label>
+                        <label for="forum">
+                            <input type="checkbox" id="forum" value="forum" name="improved[]">
+                            Forum
+                        </label>                       
+                        <label for="courses">
+                            <input type="checkbox" id="courses" value="courses" name="improved[]">
+                            Additional Courses
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label for="comments">Any comments or suggestions?</label>
+                        <textarea class="form-control" id="comments" name="comments" placeholder="Enter your comments here..." rows="6"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
